--- a/index.html
+++ b/index.html
@@ -22,8 +22,20 @@
                 <li class="item"><a href="#contacts">Контакты</a></li>
             </ul>
             <ul class="aside">
-                <li class="envelope"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="smartphone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="envelope">
+                    <a href="mailto:info@devstudio.com">
+                        <svg width="16px" height="12px">
+                            <use href="./img/symbol.svg#envelope"></use>
+                        </svg>
+                        info@devstudio.com</a>
+                </li>
+                <li class="smartphone">
+                    <a href="tel:+380961111111">
+                        <svg width="10px" height="16px">
+                            <use href="./img/symbol.svg#smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -281,31 +293,31 @@
         <li class="social-footer"> 
             <a href="#" class="social-network-footer">
                 <svg class="logo-footer" width="20px" height="20px">
-                 <use href="./img/symbol.svg#instagram"></use>
+                    <use href="./img/symbol.svg#instagram"></use>
                 </svg>
             </a>
             </li>
-            <li class="social-footer"> 
-                <a href="#" class="social-network-footer">
-                    <svg class="logo-footer" width="20px" height="20px">
-                     <use href="./img/symbol.svg#twitter"></use>
-                    </svg>
-                </a>
+        <li class="social-footer"> 
+            <a href="#" class="social-network-footer">
+                <svg class="logo-footer" width="20px" height="20px">
+                    <use href="./img/symbol.svg#twitter"></use>
+                </svg>
+            </a>
                 </li>
-                <li class="social-footer"> 
-                    <a href="#" class="social-network-footer">
-                        <svg class="logo-footer" width="20px" height="20px">
-                         <use href="./img/symbol.svg#facebook"></use>
-                        </svg>
-                    </a>
-                    </li>
-                    <li class="social-footer"> 
-                        <a href="#" class="social-network-footer">
-                            <svg class="logo-footer" width="20px" height="20px">
-                             <use href="./img/symbol.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
+        <li class="social-footer"> 
+            <a href="#" class="social-network-footer">
+                <svg class="logo-footer" width="20px" height="20px">
+                    <use href="./img/symbol.svg#facebook"></use>
+                </svg>
+            </a>
+                </li>
+        <li class="social-footer"> 
+            <a href="#" class="social-network-footer">
+                <svg class="logo-footer" width="20px" height="20px">
+                    <use href="./img/symbol.svg#linkedin"></use>
+                </svg>
+            </a>
+                </li>
     </ul>
 </div>
     <div class="form-footer">
@@ -335,7 +347,7 @@
             <svg class="close" width="18px" height="18px">
             <use href="./img/symbol.svg#close"></use>
         </button>
-    <form class="forms">
+        <form class="forms">
             <ul class="information">
                 <li><b>Оставьте свои данные, мы вам перезвоним</b></li>
                     <li><label for="name">Имя</label></li>
